--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
             <div class="calculator-card">
                 <div class="calculator-header">
                     <i class="fas fa-shopping-cart"></i>
-                    <h2>当日订单量预估计算器（增强版）</h2>
+                    <h2>当日订单量预估计算器</h2>
                 </div>
                 
                 <div class="current-time">
@@ -1007,7 +1007,7 @@
             <div class="calculator-card">
                 <div class="calculator-header">
                     <i class="fas fa-money-bill-wave"></i>
-                    <h2>营销盈利计算器 - 准确版</h2>
+                    <h2>营销盈利计算器</h2>
                 </div>
                 
                 <div class="formula-display">
@@ -1142,7 +1142,7 @@
                     description: "根据已用时间和当前曝光量，自动计算预计一小时的曝光量"
                 },
                 calculator2: {
-                    title: "🛒 当日订单量预估计算器（增强版）",
+                    title: "🛒 当日订单量预估计算器",
                     description: "基于当前时间、订单总数和每小时订单数，预估当日总订单量和推广费用"
                 },
                 calculator3: {
@@ -1587,4 +1587,5 @@
         }
     </script>
 </body>
+
 </html>
